--- a/sales.html
+++ b/sales.html
@@ -1,20 +1,63 @@
 <!doctype html>
-<Html>
+<html>
   <head>
-    <title>cookie stand</title>
+    <table>cookie stand</table>
+    <link rel="stylesheet" href ="style.css">
+
   </head>
   <body>
-    <h1>TOTAL COOKIE BY LOCATION</h1>
-    <h2>First and pike</h2>
-    <ul id="first-pike"></ul>
-    <h3>SeatacAirport</h3>
-    <ul id="seatac-airport"></ul>
-    <h3>Seattle Center</h3>
-    <ul id="Seattle-Center"></ul>
-    <h4>capital hill</h4>
-    <ul id="capitol-Hill"></ul>
-    </h5>Alki</h5>
-    <ul id="Alki"></ul>
-    <script src ="app.js"></script>
+    <h1> cookie by locattion</h1>
+    <table>
+      <tr id="hours">
+        <td></td>
+      </tr>
+    
+      <tr id="location">
+        <td>first-pike</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+
+      <td>seatac</td>
+      <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+
+    <tr id="location">
+    <td>seattle center</td>
+    <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        </tr>
+<tr id="location">
+        <td>capitol hill</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+
+        <td>Alki</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+  </table>
+  <script src="app.js"></script>
   </body>
-</Html>
+  </html>
+  
