--- a/sale.html
+++ b/sale.html
@@ -19,6 +19,32 @@
             <tfoot></tfoot>
         </table>
         </section>
+        <section>
+            <form id="add-location">
+                <fieldset>
+                    <legend>Add new store</legend>
+
+                    <label for="locName">
+                        Location Name
+                        <input name="locName" type="text"></input>
+
+                    </label>
+                    <label for ="min">
+                        minimum Customers Per Hour
+                        <input name= "min" type="number"></input>
+                    </label>
+                    <label for ="max">
+                        maximum Customers Per Hour
+                        <input name="max" type="number"></input>
+                    </label>
+                    <label for="average">
+                        average Customers Per Hour
+                        <input name="avg" type="number"></input>
+                    </label>
+                    
+                </fieldset>
+            </form>
+        </section>
 	</main>
   
   <footer>  
