--- a/sale.html
+++ b/sale.html
@@ -40,7 +40,9 @@
                     <label for="average">
                         average Customers Per Hour
                         <input name="avg" type="number"></input>
+
                     </label>
+                    <button type="submit">click here to add</button>
                     
                 </fieldset>
             </form>
