--- a/sale.html
+++ b/sale.html
@@ -1,31 +1,20 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-	<title><Cookie-Stand></Cookie-Stand></title>
-  <link href="css/style.css" />
-</head>
-
-<body>
-
-  <header> Pat cookie page</header>
-  
-	<main>
-    
-        <section>
-            <table id ="salestable">
-            <thead></thead>
-            <tbody></tbody>
-            <tfoot></tfoot>
-        </table>
-        </section>
-	</main>
-  
-  <footer>  
-  </footer>
-
-  <script src ="app.js"></script>
-  
-</body>
-
-</html>
+<!doctype html>
+<Html>
+  <head>
+    <title>cookie stand</title>
+  </head>
+  <body>
+    <h1>TOTAL COOKIE BY LOCATION</h1>
+    <h2>First and pike</h2>
+    <ul id="first-pike"></ul>
+    <h3>SeatacAirport</h3>
+    <ul id="seatac-airport"></ul>
+    <h3>Seattle Center</h3>
+    <ul id="Seattle-Center"></ul>
+    <h4>capital hill</h4>
+    <ul id="capitol-Hill"></ul>
+    </h5>Alki</h5>
+    <ul id="Alki"></ul>
+    <script src ="app.js"></script>
+  </body>
+</Html>
