--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Class 08</title>
+    <title>pat salmon cookies</title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
     
   </head>
