--- a/index.html
+++ b/index.html
@@ -3,30 +3,32 @@
   <head>
     <title>pat salmon cookies</title>
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
-    
+   
   </head>
   <body>
-    <h1>pat cookies </h1>
-    <table id="location"></table>
+      <nav id="nav">
+          <ul>
+              <li><a href ="index.html">home</a></li>
+              <li><a href ="about.html"></a></li>
+              <li><a href ="sale.html"></a></li>
 
-    <form id="loactionForm">
-        <fieldset>
-            <legend> Add a store</legend>
-
-            <label for="Name">location: </label>
-            <input type="text" name="location">
-
-            <label for="max cust">max cust </label>
-            <input type="Integer" name="max cust">
-
-            <label for="min cust">min cust </label>
-            <input type="Integer" name="min cust">
-
-            <button>new loactionForm</button>
-
-        </fieldset>
-
-    </form>
+          </ul>
+      </nav>
+    <h1>Salmon cookies </h1>
+    <div class ="row">
+        <div class ="column">
+            <ul>
+                <li id="title">hours</li>
+                <li id =hours>6am-8pm</li>
+                <li>firstpike</li>
+                <li>Sea tac</li>
+                <li>Capital hill</li>
+                <li>Seattle Center</li>
+                <li>Alki</li>
+            </ul>
+            <img alt="salmon" src="salmon.png">
+        </div>
+    </div>
     <script src="./js/app.js"></script>
   </body>
 </html>
