--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-  <ul id="stuff">
-    <li>Item a</li>
-    <li>Item b</li>
-    <li>Item c</li>
-  </ul>
-
+  <header>
+    Salmon shop
+  </header>
   <script>
     // Find Our <ul>
     var stuffList = document.getElementById("stuff");
